[B]2.6.5[/B]
Updated language files from Transifex

[B]2.6.4[/B]
Changed: tighten search query and trust musicbrainz results sorting

[B]2.6.3[/B]
Fixed: AMGData

[B]2.6.2[/B]
Added: option to fall back on artist life span from TheAudioDb.com

[B]2.6.1[/B]
Disable last.fm options because last.fm is now truncating biogs

[B]2.6.0[/B]
Added: option to fetch discography and artist life span from TheAudioDb.com

[B]2.5.0[/B]
Added: option to select language from TheAudioDB.com
Added back the option to scrape from last.fm

[B]2.4.3[/B]
Disable last.fm options because last.fm suspended XBMC's API account

[B]2.4.2[/B]
Updated language files from Transifex

[B]2.4.1[/B]
Updated language files from Transifex

[B]2.4.0[/B]
Re-enable fanart.tv scraping by default

[B]2.3.0[/B]
Added: Scraping artist thumbs and fanarts from theaudiodb.com

[B]2.2.0[/B]
Added back fanart.tv scraping via JSON API. Still off by default.

[B]2.1.9[/B]
Temporarily disable fanarttv.com scraping due to site load issues

[B]2.1.8[/B]
Fixed: Scraper now works with both API layouts

[B]2.1.7[/B]
Added: Chinese translation

[B]2.1.6[/B]
Fixed: MusicBrainz reverted back previous API layout changes so scraper needs to be reverted too

[B]2.1.5[/B]
Fixed: Broken search after API result layout changes

[B]2.1.4[/B]
Added: correctly populate the artist name into MusicInfoArtist

[B]2.1.3[/B]
Fixed: fallback from last.fm

[B]2.1.2[/B]
Changed: Loosen up search results

[B]2.1.1[/B]
Tuned: Artist Splitter

[B]2.1.0[/B]
Added: scraping Biography from TheAudioDb.com

[B]2.0.6[/B]
Fixed: accommodate new Frodo style URL encoding

[B]2.0.5[/B]
Removed: '&' sign from artist splitter

[B]2.0.4[/B]
Improved: further improve search results for artists with almost no data

[B]2.0.3[/B]
Improved: search results are now return artists with almost no data

[B]2.0.2[/B]
Fixed: artists won't find with 'and' in their name

[B]2.0.1[/B]
Fixed: potential crashes due to infinite loop

[B]2.0.0[/B]
Added: Fallback per field