@@ -1,3 +1,6 @@
+[B]3.0.0[/B]
+Added: ResolveIDToUrl
+
 [B]2.6.5[/B]
 Updated language files from Transifex
 
